--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -1,197 +1,371 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Centro Sanitario Larrabide - Display TV</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Alquiler Consulta Sanitaria - TV Display</title>
+  <style>
+    /* Variable para controlar el margen izquierdo (fácil de ajustar) */
+    :root {
+      --left-offset: 9cm; /* margen izquierdo solicitado */
+      --brand-blue: #2563eb; /* color principal del rótulo (match del header) */
+    }
 
-    <!-- React -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
+    /* Franja izquierda del tamaño de --left-offset, con el mismo azul del rótulo */
+    .left-strip {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: var(--left-offset);
+      height: 100vh;
+      background: var(--brand-blue); /* mismo azul del rótulo */
+      z-index: 0;
+      pointer-events: none; /* no interfiere con interacción */
+    }
 
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    /* Contenedor que rota la página -90deg (270°) */
+    .portrait-wrap {
+      position: absolute;
+      /* desplazamos el centro horizontal hacia la derecha por --left-offset para crear "margen izquierdo" */
+      left: calc(50% + var(--left-offset));
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(-90deg); /* 270° */
+      transform-origin: center center;
+      width: 100vh;   /* intercambia ancho/alto para portrait */
+      height: 100vw;
+      overflow: hidden;
+      z-index: 1; /* por encima de la franja izquierda */
+    }
 
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            font-size: 20px;
-        }
+    *{box-sizing:border-box;margin:0;padding:0}
+    /* Aumentamos el tamaño base de fuente para escalar rems */
+    html{
+      font-size: 20px; /* mantenido con el aumento previo */
+    }
+    html,body{
+      height:100%;
+      font-family:Segoe UI,Roboto,Arial,sans-serif;
+      background:#000;
+      color:#fff;
+      overflow:hidden;
+      position:relative;
+    }
+    header{
+      background:linear-gradient(135deg,#2563eb,#1e40af);
+      color:#fff;
+      padding:3rem 1.5rem 2rem 1.5rem;
+      text-align:center;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+    }
+    h1{
+      font-size:7rem;
+      font-weight:900;
+      letter-spacing:-1px;
+      line-height:1.1;
+      text-transform:uppercase;
+      margin-bottom:1.5rem;
+      text-shadow:0 2px 12px #111a;
+    }
+    .telefono {
+      font-size:5rem;
+      margin-top:1.5rem;
+      font-weight:700;
+      letter-spacing:2px;
+      color:#fff;
+      text-shadow:0 2px 12px #222a;
+    }
+    .price-banner{
+      background:#3b82f6;
+      color:#fff;
+      text-align:center;
+      font-weight:700;
+      padding: 2.5rem 1.2rem;
+      font-size: 5rem;
+      letter-spacing:2px;
+      margin-bottom:1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 24px #1116;
+    }
+    .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
+    .carousel-container{width:100%;height:65vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
+    .carousel{width:100%;height:100%;position:relative}
+    .carousel-slide{position:absolute;inset:0;opacity:0;transition:opacity 1s ease-in-out;display:flex;align-items:center;justify-content:center;background:#000}
+    .carousel-slide.active{opacity:1}
+    .carousel-slide img{width:100%;height:100%;object-fit:cover;display:block}
+    .carousel-controls{position:absolute;bottom:20px;left:50%;transform:translateX(-50%);display:flex;gap:12px;z-index:20}
+    .carousel-dot{width:18px;height:18px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
+    .carousel-dot.active{background:#fff;transform:scale(1.3);box-shadow:0 0 12px rgba(255,255,255,0.9)}
+    .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.6rem;height:100%}
 
-        body { font-family: Arial, sans-serif; }
+    .info-extra {
+      background: #111c;
+      border-radius: 8px;
+      margin-top: 2.5rem;
+      padding: 2.7rem 1rem;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      font-size: 4rem;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+    }
+    .info-extra h2 {
+      font-size: 5rem;
+      font-weight: 700;
+      margin-bottom: 1.2rem;
+      color: #3b82f6;
+    }
+    .info-extra ul {
+      list-style: none; padding-left: 0;
+    }
+    .info-extra li {
+      font-size: 3.5rem;
+      margin: 0.5rem 0;
+    }
+    .qr-contacto img {
+      margin-bottom: .8rem;
+      border-radius: 6px;
+      box-shadow: 0 0 12px #2226;
+      width: 260px;
+      height: 260px;
+      max-width: 48vw;
+      max-height: 48vw;
+    }
+    .qr-contacto span {
+      font-size: 3.5rem;
+      font-weight: bold;
+      display: block;
+      margin-top: 1.2rem;
+      letter-spacing: 1px;
+    }
 
-        #root {
-            position: fixed;
-            width: 100vh;
-            height: 100vw;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(270deg);
-            transform-origin: center;
-        }
-
-        .fade-transition {
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-    </style>
+    @media (orientation: portrait) {
+      header {
+        padding-top: 8vw;
+        padding-bottom: 8vw;
+      }
+      h1 {
+        font-size:13vw;
+        margin-bottom:5vw;
+      }
+      .telefono {
+        font-size:10vw;
+        margin-top:4vw;
+      }
+      .price-banner {
+        font-size:13vw;
+        padding: 5vw 2vw;
+        margin-bottom: 6vw;
+      }
+      .main-content {
+        padding-top:3vw;
+        padding-bottom:3vw;
+        gap:3vw;
+      }
+      .carousel-container {
+        height:60vh;
+      }
+      .carousel-slide img {
+        object-fit:contain;
+        background:#222;
+      }
+      .carousel-controls {
+        bottom:4vw;
+      }
+      .info-extra {
+        margin-top:7vw;
+        padding:7vw 2vw;
+        font-size:9vw;
+        gap:7vw;
+      }
+      .info-extra h2 {
+        font-size:10vw;
+      }
+      .qr-contacto img {
+        width:40vw;
+        height:40vw;
+        max-width:45vw;
+        max-height:45vw;
+      }
+      .qr-contacto span {
+        font-size:9vw;
+        margin-top:2vw;
+      }
+      /* En pantallas pequeñas, aseguramos que la franja no ocupe más del 30% del ancho */
+      .left-strip { max-width: 30vw; }
+      .portrait-wrap { left: calc(50% + min(var(--left-offset), 30vw)); }
+    }
+  </style>
 </head>
-
 <body>
-<div id="root"></div>
+  <!-- Franja azul a la izquierda del tamaño solicitado -->
+  <div class="left-strip" aria-hidden="true"></div>
 
-<script type="text/babel">
-const { useState, useEffect } = React;
+  <!-- Envolvemos TODO en .portrait-wrap para rotarlo -->
+  <div class="portrait-wrap">
+    <header>
+      <h1>Centro Sanitario Larrabide</h1>
+      <div class="telefono">TEF: 643 85 68 07</div>
+    </header>
 
-/* =======================
-   CSV PARSER ROBUSTO
-======================= */
-const parseCSV = (csv) => {
-    const lines = csv
-        .replace(/\r/g, '')
-        .trim()
-        .split('\n');
+    <div class="price-banner">Alquila tu consulta — desde 180€/mes</div>
 
-    if (lines.length < 2) return [];
-
-    const normalize = (str) =>
-        str
-            .toLowerCase()
-            .replace(/^\uFEFF/, '') // BOM
-            .trim()
-            .normalize('NFD').replace(/[\u0300-\u036f]/g, '')
-            .replace(/\s+/g, '');
-
-    const headers = lines[0].split(',').map(h => normalize(h));
-    const data = [];
-
-    for (let i = 1; i < lines.length; i++) {
-        if (!lines[i].trim()) continue;
-
-        const values = lines[i].split(',');
-        const obj = {};
-
-        headers.forEach((h, idx) => {
-            obj[h] = (values[idx] || '').trim();
-        });
-
-        if (obj.numerodespacho && obj.nombre) {
-            data.push(obj);
-        }
-    }
-    return data;
-};
-
-/* =======================
-   COMPONENTE PRINCIPAL
-======================= */
-const DisplayTV = () => {
-
-    const GOOGLE_SHEETS_URLS = {
-        0: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=171121620&single=true&output=csv',
-        1: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=0&single=true&output=csv',
-        2: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=1617258781&single=true&output=csv',
-        3: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=81958565&single=true&output=csv',
-        4: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=1770303449&single=true&output=csv',
-        5: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=953156936&single=true&output=csv',
-        6: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=1052447720&single=true&output=csv'
-    };
-
-    const PROXY = 'https://api.allorigins.win/raw?url=';
-
-    const getDay = () => new Date().getDay();
-    const getURL = () => PROXY + encodeURIComponent(GOOGLE_SHEETS_URLS[getDay()]);
-
-    const [profesionales, setProfesionales] = useState([]);
-    const [loading, setLoading] = useState(true);
-
-    const load = async () => {
-        try {
-            setLoading(true);
-            const res = await fetch(getURL());
-            const text = await res.text();
-            const data = parseCSV(text).sort(
-                (a,b) => parseInt(a.numerodespacho) - parseInt(b.numerodespacho)
-            );
-            setProfesionales(data);
-        } catch (e) {
-            console.error(e);
-        } finally {
-            setLoading(false);
-        }
-    };
-
-    useEffect(() => {
-        load();
-        const i = setInterval(load, 5 * 60 * 1000);
-        return () => clearInterval(i);
-    }, []);
-
-    if (loading) {
-        return (
-            <div style={{color: 'white', fontSize: '4vh', padding: '4vh'}}>
-                Cargando profesionales…
-            </div>
-        );
-    }
-
-    if (!profesionales.length) {
-        return (
-            <div style={{color: 'white', fontSize: '4vh', padding: '4vh'}}>
-                Hoy no hay consultas programadas
-            </div>
-        );
-    }
-
-    return (
-        <div className="min-h-screen fade-transition"
-             style={{background:'linear-gradient(135deg,#2563eb,#1e40af)',padding:'2vw'}}>
-
-            <h1 className="text-white text-center font-bold"
-                style={{fontSize:'6vh', marginBottom:'3vh'}}>
-                CENTRO SANITARIO LARRABIDE
-            </h1>
-
-            <div style={{display:'grid', gridTemplateColumns:'1fr 1fr', gap:'2vh'}}>
-                {profesionales.map((p,i)=>(
-                    <div key={i}
-                         style={{background:'white',borderRadius:'12px',padding:'2vh'}}>
-                        <div style={{fontSize:'4vh',fontWeight:'bold',color:'#2563eb'}}>
-                            Despacho {p.numerodespacho}
-                        </div>
-                        <div style={{fontSize:'3vh',fontWeight:'bold'}}>
-                            {p.especialidad}
-                        </div>
-                        <div style={{fontSize:'2.5vh'}}>
-                            {p.nombre}
-                        </div>
-                        {p.telefono && (
-                            <div style={{marginTop:'1vh',fontWeight:'bold'}}>
-                                📞 {p.telefono}
-                            </div>
-                        )}
-                    </div>
-                ))}
-            </div>
+    <div class="main-content">
+      <div class="carousel-container" aria-label="Galería de imágenes">
+        <div class="carousel" id="carousel">
+          <div class="loading" id="loading">Comprobando imágenes…</div>
         </div>
-    );
-};
+        <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
+      </div>
 
-/* =======================
-   ARRANQUE REACT 18
-======================= */
-const root = ReactDOM.createRoot(document.getElementById('root'));
-root.render(<DisplayTV />);
+      <!-- Bloque informativo con la imagen QR en tamaño grande -->
+      <div class="info-extra">
+        <div class="services">
+          <h2>Especialidades</h2>
+          <p>Espacios versátiles para cualquier especialidad sanitaria.</p>
+          <p>Consulta para profesionales de la salud: medicina, terapia, psicología… y más.</p>
+        </div>
+        <div class="horario">
+          <h2>Horario</h2>
+          <p>Lunes a viernes: 8:00 - 20:00</p>
+          <p>Sábados: 9:00 - 14:00</p>
+        </div>
+        <div class="direccion">
+          <h2>Ubicación</h2>
+          <p>Larrabide 3, Pamplona</p>
+        </div>
+        <div class="qr-contacto" style="text-align:center; margin-top:1.5rem;">
+          <img src="qr-code.png" alt="QR para WhatsApp">
+          <span>Contacta o reserva fácilmente: escanea el QR (WhatsApp)</span>
+        </div>
+      </div>
+      <!-- Fin del bloque informativo -->
+    </div>
+  </div>
 
-</script>
+  <script>
+    const images = [
+      "consulta2.jpeg","consulta3.jpeg","consulta4.jpeg","consulta5.jpeg","consulta6.jpeg",
+      "consulta7.jpeg","consulta8.jpeg","consulta9.jpeg","consulta10.jpeg","consulta11.jpeg",
+      "consulta12.jpeg","consulta13.jpeg","detalle.jpeg","detallecamilla.jpeg",
+      "pasillo.jpeg","pasillo2.jpeg","pasillo3.jpeg","pasillo4.jpeg",
+      "salaespera2.jpeg","salaespera3.jpeg"
+    ];
+    const carousel = document.getElementById('carousel');
+    const controls = document.getElementById('carouselControls');
+    const loading = document.getElementById('loading');
+    let current = 0;
+    let intervalId;
+
+    function getBasePath(){
+      const path = location.pathname;
+      if(path.endsWith('/')) return path;
+      return path.substring(0, path.lastIndexOf('/') + 1);
+    }
+    const basePath = getBasePath();
+    function filterExistingImages(list, cb){
+      const normalized = list.map(name => ({ src: name })).filter(Boolean);
+      if(normalized.length === 0) return cb([]);
+      const valid = [];
+      const missing = [];
+      let checked = 0;
+      normalized.forEach(item => {
+        const tester = new Image();
+        tester.onload = () => { valid.push(item); checked++; if(checked === normalized.length) cb(valid, missing); };
+        tester.onerror = () => { missing.push(item.src); checked++; if(checked === normalized.length) cb(valid, missing); };
+        tester.src = basePath + item.src;
+      });
+    }
+    function buildSlides(validImages){
+      carousel.innerHTML = '';
+      controls.innerHTML = '';
+      if(validImages.length === 0){
+        carousel.innerHTML = '<div class="loading">No hay imágenes disponibles.</div>';
+        return;
+      }
+      validImages.forEach((imgObj, i) => {
+        const slide = document.createElement('div');
+        slide.className = 'carousel-slide' + (i === 0 ? ' active' : '');
+        const wrapper = document.createElement('div');
+        wrapper.style.width = '100%';
+        wrapper.style.height = '100%';
+        const img = document.createElement('img');
+        img.src = basePath + imgObj.src;
+        img.alt = imgObj.src.replace(/[-_\.]/g,' ').replace(/\bjpeg\b|\bjpg\b/gi,'').replace(/\d+/g,'').trim() || 'Imagen';
+        img.loading = i === 0 ? 'eager' : 'lazy';
+        img.onerror = function(){
+          this.style.display = 'none';
+          const err = document.createElement('div');
+          err.className = 'loading';
+          err.textContent = 'Imagen no disponible';
+          slide.appendChild(err);
+        };
+        wrapper.appendChild(img);
+        slide.appendChild(wrapper);
+        carousel.appendChild(slide);
+        const dot = document.createElement('span');
+        dot.className = 'carousel-dot' + (i===0 ? ' active' : '');
+        dot.dataset.index = i;
+        dot.addEventListener('click', () => showSlide(i));
+        controls.appendChild(dot);
+      });
+      if(loading) loading.style.display = 'none';
+      startAutoplay();
+    }
+    function showSlide(n){
+      const slides = document.querySelectorAll('.carousel-slide');
+      const dots = document.querySelectorAll('.carousel-dot');
+      if(slides.length === 0) return;
+      slides.forEach(s => s.classList.remove('active'));
+      dots.forEach(d => d.classList.remove('active'));
+      current = (n + slides.length) % slides.length;
+      slides[current].classList.add('active');
+      dots[current].classList.add('active');
+    }
+    function nextSlide(){ showSlide(current + 1); }
+    function startAutoplay(){ stopAutoplay(); intervalId = setInterval(nextSlide, 5000); }
+    function stopAutoplay(){ if(intervalId) clearInterval(intervalId); }
+    filterExistingImages(images, function(valid, missing){
+      buildSlides(valid);
+    });
+    carousel.addEventListener('mouseenter', stopAutoplay);
+    carousel.addEventListener('mouseleave', startAutoplay);
+
+    // Creamos un overlay que cubra TODA la ventana y esté por encima de todo el contenido.
+    const overlay = document.createElement('div');
+    overlay.style.position = 'fixed';
+    overlay.style.inset = '0';
+    overlay.style.width = '100vw';
+    overlay.style.height = '100vh';
+    overlay.style.background = 'black';
+    overlay.style.opacity = '0';
+    overlay.style.pointerEvents = 'none'; // no bloquea interacción
+    overlay.style.transition = 'opacity 2s ease';
+    overlay.style.zIndex = '99999'; // por encima de todo
+    document.body.appendChild(overlay);
+
+    // Hacemos un fundido a negro cada 2 minutos (120000ms).
+    // El overlay sube a opacity 1 (fundido a negro), esperamos 3s y vuelve a 0.
+    function fadeCycle(){
+      overlay.style.opacity = '1';
+      // Si fuera necesario evitar interacción temporalmente, podríamos habilitar pointer-events aquí.
+      setTimeout(()=> {
+        overlay.style.opacity = '0';
+      }, 3000); // duración del "negro" visible antes de volver a transparente
+    }
+
+    // Intervalo cada 2 minutos
+    const fadeIntervalMs = 2 * 60 * 1000;
+    setInterval(fadeCycle, fadeIntervalMs);
+
+    // Primera vez después de 10s para que se vea en el primer ciclo si quieres
+    setTimeout(fadeCycle, 10000);
+
+  </script>
 </body>
 </html>
