--- a/pantalla-tv.html
+++ b/pantalla-tv.html
@@ -59,11 +59,60 @@
             font-weight: bold;
         }
 
-        .profesional-details h2 {
-            font-size: 2.8vh;
-            font-weight: bold;
-            color: #1e3a8a;
-            margin-bottom: 0.5vh;
+        .carousel-container {
+            width: 100%;
+            height: 50vh;
+            border-radius: 8px;
+            overflow: hidden;
+            position: relative;
+            background: #000;
+        }
+
+        .carousel-slide {
+            position: absolute;
+            inset: 0;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #000;
+        }
+
+        .carousel-slide.active {
+            opacity: 1;
+        }
+
+        .carousel-slide img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        .carousel-controls {
+            position: absolute;
+            bottom: 2vh;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 1vw;
+            z-index: 20;
+        }
+
+        .carousel-dot {
+            width: 1.5vh;
+            height: 1.5vh;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.35);
+            border: 2px solid rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+        }
+
+        .carousel-dot.active {
+            background: #fff;
+            transform: scale(1.3);
+            box-shadow: 0 0 12px rgba(255, 255, 255, 0.9);
         }
     </style>
 </head>
@@ -110,6 +159,12 @@
             };
 
             const [profesionales, setProfesionales] = useState([]);
+            const [currentSlide, setCurrentSlide] = useState(0);
+
+            const images = [
+                "https://centrosanitariolarrabide.github.io/tv_add/consulta2.jpeg",
+                "https://centrosanitariolarrabide.github.io/tv_add/consulta3.jpeg",
+            ];
 
             const loadProfesionales = async () => {
                 try {
@@ -118,8 +173,6 @@
                         const csvText = await response.text();
                         const data = parseCSV(csvText);
                         setProfesionales(data);
-                    } else {
-                        console.error('Error loading data:', response.status);
                     }
                 } catch (error) {
                     console.error('Error fetching profesionales:', error);
@@ -133,6 +186,39 @@
                 return () => clearInterval(interval);
             }, []);
 
+            useEffect(() => {
+                if (profesionales.length === 0) {
+                    const interval = setInterval(() => {
+                        setCurrentSlide((prev) => (prev + 1) % images.length);
+                    }, 5000);
+
+                    return () => clearInterval(interval);
+                }
+            }, [profesionales]);
+
+            if (profesionales.length === 0) {
+                return (
+                    <div style={{ background: '#000', height: '100vh', position: 'relative' }}>
+                        {images.map((img, index) => (
+                            <div
+                                key={index}
+                                className={`carousel-slide ${index === currentSlide ? 'active' : ''}`}
+                            >
+                                <img src={img} alt={`Slide ${index}`} />
+                            </div>
+                        ))}
+                        <div className="carousel-controls">
+                            {images.map((_, index) => (
+                                <span
+                                    key={index}
+                                    className={`carousel-dot ${index === currentSlide ? 'active' : ''}`}
+                                />
+                            ))}
+                        </div>
+                    </div>
+                );
+            }
+
             return (
                 <div style={{ background: 'linear-gradient(135deg, #2563eb, #1e40af)', padding: '2vw' }}>
                     <div style={{ maxWidth: '90vw', margin: '0 auto', paddingTop: '2vh' }}>
@@ -140,7 +226,7 @@
                             {profesionales.map((prof, index) => (
                                 <div key={index} className="profesional-card">
                                     <div className="consulting-room">{prof.numeroDespacho || 'N/A'}</div>
-                                    <div className="profesional-details">
+                                    <div>
                                         <h2>{prof.nombre || 'Sin Nombre'}</h2>
                                         <p>{prof.especialidad || 'Sin Especialidad'}</p>
                                         {prof.telefono && <p>Cita previa: {prof.telefono}</p>}
