--- a/DESPACHOS/despachos.html
+++ b/DESPACHOS/despachos.html
@@ -18,6 +18,15 @@
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
       padding: 0;
+
+      /* Añadido para rotar la web 270 grados */
+      transform: rotate(-90deg);
+      transform-origin: center; /* Punto de origen: centro */
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     h1 {
