Refactor despachos.html layout and styles

--- a/DESPACHOS/despachos.html
+++ b/DESPACHOS/despachos.html
@@ -17,30 +17,39 @@
       color: var(--white);
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
+
+      /* Centrar todo el contenido */
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      height: 100vh;
+      overflow: hidden; /* Evitar scroll innecesario */
     }
 
     h1 {
       text-align: center;
-      font-size: 5.5rem; /* TÍTULO */
-      margin: 40px 0; /* Más separación del título */
+      font-size: 5.5rem; /* Tamaño del título */
+      margin: 20px 0; /* Mantener separación correcta */
+    }
+
+    .container-wrapper {
+      position: relative;
+      width: 100vh; /* Cambiamos altura porque está rotado */
+      height: 100vw; /* Cambiamos anchura porque está rotado */
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .container {
-      display: grid; /* Usamos Grid para centrado perfecto */
+      display: grid; /* Usamos Grid para las tarjetas */
       grid-template-columns: repeat(2, 1fr); /* Dos columnas */
-      justify-content: center; /* Centramos contenido en la pantalla */
-      align-content: center;
       gap: 25px; /* Más espaciado entre fichas */
-      padding: 20px;
 
-      /* Rotar solo las tarjetas */
+      /* Rotar todo el contenedor de las tarjetas */
       transform: rotate(-90deg);
-      transform-origin: center; /* Controla el centro de rotación */
     }
 
     .card {
@@ -49,21 +58,20 @@
       border-radius: 15px;
       box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); /* Sombra notable */
       padding: 40px; /* Más espacio interno */
-      width: 90%; /* Anchura amplia */
-      max-width: 800px; /* Amplía el tamaño máximo */
-      margin: 0 auto; /* Asegura que esté centrado */
+      width: 100%; /* Aseguramos que se adaptan al ancho disponible */
+      max-width: 300px; /* Proporción adecuada de cada tarjeta */
       box-sizing: border-box;
+      text-align: center; /* Centramos contenido */
     }
 
     .card .room-number {
       background-color: var(--highlight-blue);
       color: var(--white);
-      font-size: 3.5rem; /* Número grande */
+      font-size: 3.5rem; /* Tamaño del número */
       font-weight: bold;
       padding: 20px;
-      text-align: center;
       border-radius: 50%; /* Efecto circular */
-      margin: 0 auto 30px auto; /* Centra número y separa del texto */
+      margin: 0 auto 20px auto; /* Centra número y separa del texto */
       width: 120px;
       height: 120px;
       display: flex;
@@ -72,11 +80,8 @@
     }
 
     .card p {
-      margin: 15px 0;
-      font-size: 2.5rem; /* Texto más grande */
-      line-height: 3rem; /* Más espacio entre líneas */
-      font-weight: bold;
-      text-align: center; /* Centrar texto para mayor legibilidad */
+      margin: 10px 0; /* Separación entre líneas */
+      font-size: 1.8rem; /* Especificar tamaño del texto */
     }
 
     .error {
@@ -89,7 +94,9 @@
 </head>
 <body>
   <h1>CENTRO SANITARIO LARRABIDE</h1>
-  <div id="cards-container" class="container"></div>
+  <div class="container-wrapper">
+    <div id="cards-container" class="container"></div>
+  </div>
   <p id="error-message" class="error"></p>
 
   <script>
@@ -125,9 +132,7 @@
     function parseCSV(data) {
       const rows = data.split("\n").slice(1); // Ignorar encabezados
       return rows.map(row => {
-        const fields = row.split(","); // Comas para columnas
-        console.log("Procesando fila:", fields);
-
+        const fields = row.split(",");
         return {
           numeroDespacho: fields[0]?.trim() || "N/A",
           especialidad: fields[1]?.trim() || "N/A",
@@ -141,7 +146,7 @@
 
     function renderCards(professionals) {
       const container = document.getElementById("cards-container");
-      container.innerHTML = ""; // Limpia contenido previo
+      container.innerHTML = ""; 
       professionals.forEach(prof => {
         const card = document.createElement("div");
         card.className = "card";
